# spectral-ebm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
benchmark_results/: 2026-07-14-cpu.json  2026-07-14-cuda.json  2026-07-14-extensions-cpu.json  2026-07-14-full-cuda-large.json  2026-07-14-gaussian-dsm.json  2026-07-14-hardening-cpu.json  2026-07-14-mixture-dsm.json  2026-07-14-ring-score.json  2026-07-14-structured-cuda.json  2026-07-14-triton-cuda.json  2026-07-14-triton.json  README.md  full-cuda-smoke.json
benchmarks/: benchmark_extensions.py  benchmark_layers.py  benchmark_triton.py  full_benchmark.py  hardening_audit.py  structured_benchmark.py
docs/: benchmark_protocol.md  formal_search.md  hardening.md  novelty.md  proof.md  training.md
scripts/: formal_search_demo.py  make_plots.py  toy_gaussian.py  train_gaussian_dsm.py  train_mixture_dsm.py  train_ring_score.py
spectral_ebm/: __init__.py  baselines.py  chains.py  formal_search.py  layers.py  models.py  permutations.py  sampler.py  training.py  triton_backend.py
tests/: test_baselines.py  test_chains.py  test_formal_search.py  test_hardening.py  test_layers.py  test_models.py  test_sampler.py  test_serialization.py  test_training.py  test_triton.py
